--- a/src/views/index.html
+++ b/src/views/index.html
@@ -9,7 +9,7 @@
 </head>
 
 <body>
-    <h1>App</h1>
+    <h1>Scraping</h1>
     <form action="/search" method="post">
         <label for="url">Enter Page</label>
         <input type="text" name="url" id="url">
